--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <nav>
 	<ul>
 		<li><img src="bonek.jpg" width="70px0px"></li>
-		 <li><a href="D:/coba/cobak.html">Home</a>
+		 <li><a href="https://yoijull28.github.io/index.html">Home</a>
 			<ul>
 			</ul>
 		</li>
