--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
 	<ul>
 		<li><img src="bonek.jpg" width="70px0px"></li>
-		 <li><a href="https://yoijull28.github.io/home.html">home</a>
+		 <li><a href="https://yoijull28.github.io/home.html">About</a>
 			<ul>
 			</ul>
 		</li>
