--- a/Surabaya.html
+++ b/Surabaya.html
@@ -45,7 +45,7 @@
 			 
 		<h3>4. Nasi Goreng Jancok</h3>
 			<p>Jika ada satu kata yang akan mengingatkan orang-orang akan Surabaya, maka kata terakhir pada tempat wisata kuliner Surabaya yang satu ini adalah kata yang tepat. Meski Anda bisa mendapatkan nasi goreng di mana saja, Nasi Goreng Jancuk adalah destinasi kuliner Surabaya yang tidak bisa Anda lewatkan begitu saja ketika berada di kota ini.
-			   Asal muasal nama ini juga bisa dikatakan spontan. Konon, Nasi Goreng Jancuk berasal dari umpatan pelanggan setelah mencicipi sajian ini. Koki yang membuat menu ini untuk teman-temannya sengaja menambahkan cabai rawit dengan jumlah yang banyak dan ketika sendok pertama nasi goreng ini sampai di lidah teman-teman si koki, spontan mereka mengumpat, “Jancuk! Pedes, Cuk!”
+			   Asal muasal nama ini juga bisa dikatakan spontan. Konon, Nasi Goreng Jancuk berasal dari umpatan pelanggan setelah mencicipi sajian ini. Koki yang membuat menu ini untuk teman-temannya sengaja menambahkan cabai rawit dengan jumlah yang banyak dan ketika sendok pertama nasi goreng ini sampai di lidah teman-teman si koki, spontan mereka mengumpat, â€œJancuk! Pedes, Cuk!â€
 			   Jika ingin menikmati nasi goreng khas Surabaya ini, ada baiknya Anda ditemani beberapa orang. Porsinya cukup banyak, cukup untuk sekitar empat sampai lima orang. Dengan harga sekitar Rp150.000,00 per porsi, Anda bisa mendapatkan Nasi Goreng Jancuk di Hotel Surabaya Suites.</p>
 			<p><img src="sby4.jpg" height="250" width="300" </p>
 			
